# nipe_py

./: .cruft.json  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  release.yml
docs/: index.md
docs/reference/: nipe_py.md
nipe_py/: __init__.py
src/nipe_py/: __init__.py  main.py
src/nipe_py/engine/: Restart.py  Start.py  Stop.py
src/nipe_py/utils/: Device.py  Install.py  Status.py
tests/: test_add.py
