[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=nipe_py/ --cov-report=term-missing"


[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "nipe_py/__init__.py"

[tool.hatch.envs.default]
python = "3.11"
dependencies = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "ruff format .",
  "ruff --fix .",
  "mypy nipe_py/",
]
lint-check = [
  "ruff format --check .",
  "ruff .",
  "mypy nipe_py/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "nipe_py"
authors = [
  { name = "nipe_py", email = "king.arthur@camelot.bt" }
]
description = ""
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
]

[project.urls]
Documentation = "https://avik_saikat.github.io/nipe_py/"
Source = "https://github.com/avik_saikat/nipe_py"
